ITCS: Add textbook

--- a/2021_22/ITCS/notes/notes.tex
+++ b/2021_22/ITCS/notes/notes.tex
@@ -7,6 +7,7 @@
 \author{Franz Miltz}
 \begin{document}
 \maketitle
+\noindent Textbook: M. Sipser, \emph{Introduction to the Theory of Computation}
 \tableofcontents
 \pagebreak
 
